[gd_scene load_steps=4 format=3 uid="uid://uewrjfvgl0q7"]

[ext_resource type="Script" path="res://components/preview_item.gd" id="1_ia5u1"]

[sub_resource type="InputEventKey" id="InputEventKey_a7e7a"]
device = -1
pressed = true
keycode = 70
physical_keycode = 70
key_label = 70
unicode = 102

[sub_resource type="Shortcut" id="Shortcut_48i67"]
events = [SubResource("InputEventKey_a7e7a")]

[node name="PreviewItem" type="HBoxContainer"]
offset_right = 8.0
size_flags_horizontal = 3
script = ExtResource("1_ia5u1")
file_path = &"res://glitch_001.ogg"

[node name="FavoriteButton" type="Button" parent="." node_paths=PackedStringArray("shortcut_context")]
layout_mode = 2
focus_mode = 0
shortcut_context = NodePath("..")
toggle_mode = true
action_mode = 0
shortcut = SubResource("Shortcut_48i67")
flat = true

[connection signal="toggled" from="FavoriteButton" to="." method="_on_favorite_button_toggled"]
